@@ -1500,7 +1500,7 @@ let do_build_inductive
   let _time2 = System.get_time () in
   try
     with_full_print
-      (Flags.silently (ComInductive.do_mutual_inductive rel_inds (Flags.is_universe_polymorphism ()) false false))
+      (Flags.silently (ComInductive.do_mutual_inductive ~check_positivity:None rel_inds (Flags.is_universe_polymorphism ()) false false))
       Declarations.Finite
   with
     | UserError(s,msg) as e ->
