@@ -243,10 +243,10 @@ let interp_fixpoint ~cofix l ntns =
   check_recursive true env evd fix;
   (fix,pl,Evd.evar_universe_context evd,info)
 
-(* guarded: Some b -> set check_guarded to b, None -> does not change it *)
-let declare_fixpoint guarded local poly ((fixnames,fixdefs,fixtypes),pl,ctx,fiximps) indexes ntns =
+(* check_guard: Some b -> set check_guarded to b, None -> does not change it *)
+let declare_fixpoint ~check_guard local poly ((fixnames,fixdefs,fixtypes),pl,ctx,fiximps) indexes ntns =
   let original_typing_flag = Environ.typing_flags (Global.env ()) in
-  let new_typing_flag = Option.cata (fun b -> {original_typing_flag with Declarations.check_guarded = b}) original_typing_flag guarded in
+  let new_typing_flag = Option.cata (fun b -> {original_typing_flag with Declarations.check_guarded = b}) original_typing_flag check_guard in
   Global.set_typing_flags new_typing_flag;
   if List.exists Option.is_empty fixdefs then
     (* Some bodies to define by proof *)
@@ -283,9 +283,9 @@ let declare_fixpoint guarded local poly ((fixnames,fixdefs,fixtypes),pl,ctx,fixi
   (* Declare notations *)
   List.iter (Metasyntax.add_notation_interpretation (Global.env())) ntns
 
-let declare_cofixpoint guarded local poly ((fixnames,fixdefs,fixtypes),pl,ctx,fiximps) ntns =
+let declare_cofixpoint ~check_guard local poly ((fixnames,fixdefs,fixtypes),pl,ctx,fiximps) ntns =
   let original_typing_flag = Environ.typing_flags (Global.env ()) in
-  let new_typing_flag = Option.cata (fun b -> {original_typing_flag with Declarations.check_guarded = b}) original_typing_flag guarded in
+  let new_typing_flag = Option.cata (fun b -> {original_typing_flag with Declarations.check_guarded = b}) original_typing_flag check_guard in
   Global.set_typing_flags new_typing_flag;
   if List.exists Option.is_empty fixdefs then
     (* Some bodies to define by proof *)
@@ -346,16 +346,16 @@ let check_safe () =
   let flags = Environ.typing_flags (Global.env ()) in
   flags.check_universes && flags.check_guarded
 
-let do_fixpoint guarded local poly l =
+let do_fixpoint ~check_guard local poly l =
   let fixl, ntns = extract_fixpoint_components true l in
   let (_, _, _, info as fix) = interp_fixpoint ~cofix:false fixl ntns in
   let possible_indexes =
     List.map compute_possible_guardness_evidences info in
-  declare_fixpoint guarded local poly fix possible_indexes ntns;
-  if guarded = Some false || not (check_safe ()) then Feedback.feedback Feedback.AddedAxiom else ()
+  declare_fixpoint ~check_guard local poly fix possible_indexes ntns;
+  if check_guard = Some false || not (check_safe ()) then Feedback.feedback Feedback.AddedAxiom else ()
 
-let do_cofixpoint guarded local poly l =
+let do_cofixpoint ~check_guard local poly l =
   let fixl,ntns = extract_cofixpoint_components l in
   let cofix = interp_fixpoint ~cofix:true fixl ntns in
-  declare_cofixpoint guarded local poly cofix ntns;
-  if guarded = Some false || not (check_safe ()) then Feedback.feedback Feedback.AddedAxiom else ()
+  declare_cofixpoint ~check_guard local poly cofix ntns;
+  if check_guard = Some false || not (check_safe ()) then Feedback.feedback Feedback.AddedAxiom else ()
