@@ -38,8 +38,11 @@ Vernacular Commands
   By default, they are disabled and produce an error. The deprecation
   warning which used to occur when using nested proofs has been removed.
 - Guard check can be temporary disabled to define non terminating fixpoints
-  or non productive cofixpoints with the commands `Unguarded Fixpoints`
+  or non productive cofixpoints with the commands `Unguarded Fixpoint`
   and `Unguarded CoFixpoint`.
+- Positivity check can be temporary disabled to define non positive inductive
+  or coinductive types with the commands `Assumed Positive Inductive`
+  and `Assumed Positive CoInductive`.
 
 Coq binaries and process model
 
